--- a/client/src/components/News/news.scss
+++ b/client/src/components/News/news.scss
@@ -1,11 +1,14 @@
 @import '../../base.scss';
 
 .news-ctr{
-  margin: 0;
+  margin: 35px;
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width:100%;
+  background-color: $news-bg;
+  box-shadow: 0px 6px 20px $header-shadow;
+  border-radius: 10px;
 
 }
 .news-img{
