--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -3,3 +3,5 @@ $link-font: #68CEF1;
 $hover: #7B7B7F;
 $header-shadow: rgba(41, 41, 48, .65);
 $news-bg: #E8E4E8;
+$ticker-bg: #E8E4E8;
+$border: rgb(202, 202, 207);
