--- a/client/src/components/Home/home.scss
+++ b/client/src/components/Home/home.scss
@@ -1,8 +1,9 @@
 .home-bs{
   margin-top: 7vh;
 }
+
 .home-ctr {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 30px 90px 90px 90px;
 }
