--- a/client/src/components/News/news.scss
+++ b/client/src/components/News/news.scss
@@ -5,15 +5,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width:100%;
+  width:100%;
   background-color: $news-bg;
   box-shadow: 0px 6px 20px $header-shadow;
   border-radius: 10px;
-
+ 
 }
+
 .news-img{
   max-width: 40%;
   min-width:40%;
+  padding-bottom: 20px;
+  border-radius: 5px;
 }
 .news-desc{
   text-align: center;
