info styling basic

--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -5,3 +5,6 @@ $header-shadow: rgba(41, 41, 48, .65);
 $news-bg: #E8E4E8;
 $ticker-bg: #E8E4E8;
 $border: rgb(202, 202, 207);
+$info-bg: #E8E4E8;
+$scroll-bg: #0D2C54;
+$scroll-title: rgba(170, 163, 170, 0.8);
