--- a/client/src/components/Coininfo/coininfo.scss
+++ b/client/src/components/Coininfo/coininfo.scss
@@ -1,12 +1,131 @@
 @import '../../base.scss';
 
-.info-ctr{
+.info-bx-header {
+  position: fixed;
+  background-color:$scroll-title;
+  z-index: 1;
+}
+
+.info-ctr {
   margin-top: 7vh;
   display: flex;
   flex-direction: column;
+  height: 90vh;
+  width: 100vw;
+  box-sizing: border-box;
 }
 
-.data-ctr{
-  border: 2px black solid;
+.coin-name {
+  align-self: center;
+}
+
+.flex-ctr {
+  display: flex;
+}
+
+.data-ctr {
+  width: 500px;
+  margin: 0 20px;
+  padding: 10px;
+  background-color: $info-bg;
+  border: 1px $border solid;
+  box-shadow: 0px 6px 10px $header-shadow;
+  border-radius: 5px;
+  text-align: center;
+  height: 80vh;
+  box-sizing: border-box;
+}
+
+.hover-ctr {
+  :hover {
+    transform: scale(1.1);
+  }
+}
+
+.coin-logo {
+  max-height: 100px;
+}
+
+.news-base-ctr {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+
+}
+
+.info-news-ctr {
+  background-color: $info-bg;
+  box-shadow: 0px 6px 10px $header-shadow;
+  border-radius: 5px;
+  height: 400px;
+  width: 400px;
+  text-align: center;
+  margin: 30px;
+  padding: 30px;
+
+  :hover {
+    transform: scale(1.0);
+  }
+}
+
+.full-scroll {
+  box-shadow: 0px 6px 10px $header-shadow;
+  background-color: $scroll-bg;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  height: 80vh;
+  width: 600px;
+  border-radius: 5px;
+}
+
+.news-img {
+  max-width: 300px;
+  min-width: 300px;
+  max-height: 200px;
+  min-height: 200px;
+}
+
+.info-red-ctr {
+  background-color: $info-bg;
+  box-shadow: 0px 6px 10px $header-shadow;
+  border-radius: 5px;
+  width: 400px;
+  text-align: center;
+  margin: 30px;
+  padding: 30px;
+  :hover {
+    transform: scale(1.0);
+  }
+}
+
+.info-tweet-ctr {
+  background-color: $info-bg;
+  box-shadow: 0px 6px 10px $header-shadow;
+  border-radius: 5px;
+  width: 400px;
+  text-align: center;
+  margin: 30px;
+  padding: 30px;
+}
+
+.red-twt-ctr {
   
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.half-scroll {
+  background-color: $scroll-bg;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  height: 38vh;
+  width: 35vw;
+  margin: 0 20px ;
+  box-shadow: 0px 6px 10px $header-shadow;
+  border-radius: 5px;
 }
