--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,15 +1,15 @@
 @import './base.scss';
 @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i&display=swap');
 
-
 * {
   font-family: 'Lato',
     sans-serif;
+    margin: 0;
 }
 
 .App {
   width: 100%;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .App-header {
