--- a/client/src/components/Home/home.scss
+++ b/client/src/components/Home/home.scss
@@ -1,9 +1,18 @@
+
 .home-bs{
   margin-top: 7vh;
+  
 }
 
 .home-ctr {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 30px 90px 90px 90px;
+}
+
+.coin-home-ctr{
+background-color: salmon;
+  overflow: auto;
+  max-width: 1200px;
 }
