--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -8,3 +8,4 @@ $border: rgb(202, 202, 207);
 $info-bg: #E8E4E8;
 $scroll-bg: #0D2C54;
 $scroll-title: rgba(170, 163, 170, 0.8);
+$coin-info-text:#0D2C54;
