--- a/client/src/components/Home/home.scss
+++ b/client/src/components/Home/home.scss
@@ -1,18 +1,31 @@
+@import '../../base.scss';
 
-.home-bs{
+.home-bs {
   margin-top: 7vh;
-  
+// display: flex;
+// flex-direction: column;
+// align-items: center;
 }
 
 .home-ctr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 30px 90px 90px 90px;
+   
+  // margin: 30px 90px 90px 90px;
 }
 
-.coin-home-ctr{
-background-color: salmon;
+.home-title {
+  margin: 10px;
+  text-align: center;
+}
+
+.coin-home-ctr {
+  // background-color: $scroll-bg;
+  padding: 10px;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
   overflow: auto;
-  max-width: 1200px;
+  width: 90%;
 }
