--- a/client/src/components/News/news.scss
+++ b/client/src/components/News/news.scss
@@ -1,17 +1,23 @@
 @import '../../base.scss';
 
 .news-ctr{
-  margin: 35px;
+  margin: 35px  0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width:100%;
+  // justify-content: center;
+  
+  width:80%;
   background-color: $news-bg;
   box-shadow: 0px 6px 20px $header-shadow;
   border-radius: 10px;
  
 }
-
+.news-bs-ctr{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
 .news-img{
   max-width: 40%;
   min-width:40%;
