--- a/client/src/components/Home/home.scss
+++ b/client/src/components/Home/home.scss
@@ -21,11 +21,11 @@
 }
 
 .coin-home-ctr {
-  // background-color: $scroll-bg;
+  background-color: $scroll-bg;
   padding: 10px;
   justify-content: center;
   align-content: center;
   align-items: center;
   overflow: auto;
-  width: 90%;
+  width: 100%;
 }
