--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -1,11 +1,14 @@
-$header-color: #303036;
-$link-font: #68CEF1;
+$header-color: #011638;
+$link-font: #97F9F9;
 $hover: #7B7B7F;
 $header-shadow: rgba(41, 41, 48, .65);
-$news-bg: #E8E4E8;
-$ticker-bg: #E8E4E8;
+$news-bg: #CDCDCD;
+$ticker-bg: #CDCDCD;
 $border: rgb(202, 202, 207);
-$info-bg: #E8E4E8;
-$scroll-bg: #0D2C54;
-$scroll-title: rgba(170, 163, 170, 0.8);
-$coin-info-text:#0D2C54;
+$info-bg: #CDCDCD;
+$scroll-bg: #364156;
+$scroll-title: rgba(170, 163, 170, 0.1);
+$coin-info-text:#364156;
+$app-bg: #E3E6E5;
+$app-text:#011638;
+
