--- a/client/src/components/Coin/coin.scss
+++ b/client/src/components/Coin/coin.scss
@@ -6,12 +6,15 @@
 
 .coin-ctr{
   display: flex;
-  margin: 0 25px;
-  align-content: space-around;
+  margin: 10px 25px;
+  justify-content: space-between;
+  align-content: space-between;
   background-color: $ticker-bg ;
   border-radius: 5px;
   border: 1px $border solid;
   box-shadow: 0px 6px 10px $header-shadow;
+  height: 100px;
+  width:250px;
 }
 
 .coin-bs :hover{
@@ -31,10 +34,10 @@
   height: 70px;
   width: 70px;
   align-self:center;
-  margin-left: 3px;
+  margin-left: 15px;
 }
 
-.coin-data {
-  margin: 0;
+// .coin-data {
+//   margin: 0;
   
-}
+// }
