--- a/client/src/components/News/news.scss
+++ b/client/src/components/News/news.scss
@@ -5,13 +5,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: center;
-  
-  width:80%;
+  padding: 20px 20px 0 20px;
+  width:70%;
   background-color: $news-bg;
   box-shadow: 0px 6px 20px $header-shadow;
   border-radius: 10px;
- 
+  
+}
+.news-title{
+ :hover {
+   transform: scale(1.1);
+ }
 }
 .news-bs-ctr{
    display: flex;
@@ -21,7 +25,6 @@
 .news-img{
   max-width: 40%;
   min-width:40%;
-  padding-bottom: 20px;
   border-radius: 5px;
 }
 .news-desc{
