--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -11,4 +11,5 @@ $scroll-title: rgba(170, 163, 170, 0.1);
 $coin-info-text:#364156;
 $app-bg: #E3E6E5;
 $app-text:#011638;
+$scroll-header: #E3E6E5;
 
