--- a/client/src/components/Login/login.scss
+++ b/client/src/components/Login/login.scss
@@ -1,9 +1,24 @@
-.login-ctr{
-  height:100vh;
-  width:100vw;
+@import '../../base.scss';
+
+.login-ctr {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 .login-form {
+  margin:10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   padding: 15px;
   width: 400px;
-  border: 1px #eee solid;
+  border: 5px $app-text solid;
+  border-radius: 5px;
+  background-color: $login-ctr;
+
 }
