--- a/client/src/components/SignUp/signup.scss
+++ b/client/src/components/SignUp/signup.scss
@@ -1,4 +1,24 @@
+@import '../../base.scss';
+
 .signup-ctr{
   height:100vh;
   width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+}
+
+.signup-form {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 15px;
+  width: 400px;
+  border: 5px $app-text solid;
+  border-radius: 5px;
+  background-color: $login-ctr;
+
 }
