--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -13,4 +13,5 @@ $app-bg: #E3E6E5;
 $app-text:#011638;
 $scroll-header: #E3E6E5;
 $login-ctr: rgba(110, 110, 128, 0.6);
+$footer-bg: rgba(110, 110, 128, 0.6);
 
