--- a/client/src/components/CoinList/coinlist.scss
+++ b/client/src/components/CoinList/coinlist.scss
@@ -1,9 +1,6 @@
 .coinlist {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
-  margin: 100px;
   display: flex;
   flex-direction: column;
-
-
 }
