--- a/client/src/components/Dashboard/dashboard.scss
+++ b/client/src/components/Dashboard/dashboard.scss
@@ -16,7 +16,8 @@
       align-items: center;
 }
 .db-title{
-  margin-top:8vh;
+  margin-top: 8vh;
+  // margin-top:calc(8vh+100px);
   margin-bottom: 40px;
  text-align: center;
   font-size: 30px;
