--- a/client/src/components/Coin/coin.scss
+++ b/client/src/components/Coin/coin.scss
@@ -7,13 +7,13 @@
 .coin-ctr{
   display: flex;
   margin: 10px 25px;
-  justify-content: space-between;
-  align-content: space-between;
+  justify-content: space-evenly;
+  align-content: space-evenly;
   background-color: $ticker-bg ;
   border-radius: 5px;
   border: 1px $border solid;
   box-shadow: 0px 6px 10px $header-shadow;
-  height: 100px;
+  height: 125px;
   width:250px;
 }
 
@@ -26,8 +26,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px 20px;
-  margin: 10px;
+  padding: 10px 35px 10px 10px;
+  // margin: 10px;
 }
 
 .coin-img {
@@ -37,7 +37,8 @@
   margin-left: 15px;
 }
 
-// .coin-data {
-//   margin: 0;
+.coin-data {
+  margin: 0;
   
-// }
+  
+}
