--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -6,7 +6,7 @@
 }
 
 .App {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
   background-color: #ffffff;
@@ -24,7 +24,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(20px);
   top: 0;
   z-index: 1;
 }
@@ -247,25 +247,6 @@ main {
   text-align: center;
   margin: 30px;
   padding: 30px;
-}
-
-.red-twt-ctr {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.half-scroll {
-  background-color: #364156;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: auto;
-  height: 38vh;
-  width: 35vw;
-  margin: 0 20px;
-  box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  border-radius: 5px;
 }
 
 .info-datapts {
