--- a/client/src/scss/_globals.scss
+++ b/client/src/scss/_globals.scss
@@ -8,7 +8,7 @@
 }
 
 .App {
-  height: 100%;
+  height:100vh;
   width: 100%;
   margin: 0;
   background-color: #ffffff;
@@ -27,7 +27,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(20px);
   top: 0;
   z-index: 1;
 }
@@ -35,10 +35,6 @@
 .App-link {
   color: $link-font;
 }
-
-
-
-
 
 .errorMessage {
   border: red 1px solid;
