--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -137,128 +137,61 @@ main {
   margin: 0;
 }
 
-.info-bx-header {
-  text-align: center;
-  width: 100%;
-  background-color: rgba(170, 163, 170, 0.1);
-  color: #E3E6E5;
+.CoinInfo {
+  margin-top: 100px;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-box-flex-direction: column;
+  -moz-box-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-justify-content: space-around;
+  -moz-box-justify-content: space-around;
+  -ms-justify-content: space-around;
+  justify-content: space-around;
 }
 
-.info-ctr {
-  margin-top: 7vh;
+.CoinInfo__header {
+  display: -moz-flex;
+  display: -ms-flex;
   display: flex;
-  flex-direction: column;
-  height: 90vh;
+  -webkit-box-flex-direction: row;
+  -moz-box-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-justify-content: space-between;
+  -moz-box-justify-content: space-between;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
   width: 100vw;
-  box-sizing: border-box;
-}
-
-.coin-name {
-  align-self: center;
-  margin: 10px;
-  font-size: 40px;
-}
-
-.flex-ctr {
-  display: flex;
-}
-
-.data-ctr {
-  width: 500px;
-  margin: 0 20px;
-  padding: 10px;
-  background-color: #CDCDCD;
-  border: 1px #cacacf solid;
-  box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  border-radius: 5px;
-  text-align: center;
-  height: 80vh;
-  box-sizing: border-box;
-  border: 20px solid #364156;
-}
-
-.hover-ctr :hover {
-  transform: scale(1.1);
-}
-
-.coin-logo {
-  max-height: 100px;
-}
-
-.news-base-ctr {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-}
-
-.info-news-ctr {
-  background-color: #CDCDCD;
-  box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  border-radius: 5px;
-  width: 400px;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
-}
-
-.info-news-ctr :hover {
-  transform: scale(1);
-}
-
-.full-scroll {
-  box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  background-color: #364156;
-  display: flex;
-  flex-direction: column;
+  padding: 0 75px;
   align-items: center;
-  overflow: auto;
-  height: 80vh;
-  width: 600px;
-  border-radius: 5px;
 }
 
-.news-img {
-  max-width: 300px;
-  min-width: 300px;
-  max-height: 200px;
-  min-height: 200px;
-  margin: 5px;
+.CoinInfo__header--left {
+  display: -moz-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-box-flex-direction: row;
+  -moz-box-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-justify-content: space-between;
+  -moz-box-justify-content: space-between;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.info-rt-ctr {
-  background-color: #CDCDCD;
-  box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  border-radius: 5px;
-  width: 400px;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
+.CoinInfo__header--image {
+  height: 150px;
 }
 
-.info-rt-ctr :hover {
-  transform: scale(1);
+.CoinInfo__header--title {
+  font-size: 70px;
+  margin-left: 30px;
 }
 
-.info-tweet-ctr {
-  background-color: #CDCDCD;
-  box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  border-radius: 5px;
-  width: 400px;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
-}
-
-.info-datapts {
-  margin: 10px;
-  color: #364156;
-}
-
-.info-button {
-  outline: 0;
-  height: 45px;
-  width: 150px;
-  font-size: 25px;
+.CoinInfo__header--button {
+  margin-right: 100px;
 }
 
 .coinlist {
