--- a/client/src/scss/_coininfo.scss
+++ b/client/src/scss/_coininfo.scss
@@ -1,126 +1,27 @@
-.info-bx-header {
-  text-align: center;
-  width: 100%;
-  background-color: $scroll-title;
-  color: $scroll-header;
-}
+.CoinInfo {
+  margin-top: 100px;
+  @include flexbox(column, space-around);
 
-.info-ctr {
-  margin-top: 7vh;
-  display: flex;
-  flex-direction: column;
-  height: 90vh;
-  width: 100vw;
-  box-sizing: border-box;
-}
+  &__header {
+    @include flexbox(row, space-between);
+    width: 100vw;
+    padding: 0 75px;
+    align-items: center;
 
-.coin-name {
-  align-self: center;
-  margin: 10px;
-  font-size: 40px;
-}
+    &--left {
+      @include flexbox();
+      align-items: center;
+    }
 
-.flex-ctr {
-  display: flex;
-}
-
-.data-ctr {
-  width: 500px;
-  margin: 0 20px;
-  padding: 10px;
-  background-color: $info-bg;
-  border: 1px $border solid;
-  box-shadow: 0px 6px 10px $header-shadow;
-  border-radius: 5px;
-  text-align: center;
-  height: 80vh;
-  box-sizing: border-box;
-  border: 20px solid $scroll-bg
-}
-
-.hover-ctr {
-  :hover {
-    transform: scale(1.1);
+    &--image {
+      height: 150px;
+    }
+    &--title{
+      font-size: 70px;
+      margin-left: 30px;
+    }
+    &--button{
+      margin-right: 100px;
+    }
   }
 }
-
-.coin-logo {
-  max-height: 100px;
-}
-
-.news-base-ctr {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-}
-
-.info-news-ctr {
-  background-color: $info-bg;
-  box-shadow: 0px 6px 10px $header-shadow;
-  border-radius: 5px;
-  width: 400px;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
-  :hover {
-    transform: scale(1.0);
-  }
-}
-
-.full-scroll {
-  box-shadow: 0px 6px 10px $header-shadow;
-  background-color: $scroll-bg;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: auto;
-  height: 80vh;
-  width: 600px;
-  border-radius: 5px;
-}
-
-.news-img {
-  max-width: 300px;
-  min-width: 300px;
-  max-height: 200px;
-  min-height: 200px;
-  margin: 5px;
-}
-
-.info-rt-ctr {
-  background-color: $info-bg;
-  box-shadow: 0px 6px 10px $header-shadow;
-  border-radius: 5px;
-  width: 400px;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
-
-  :hover {
-    transform: scale(1.0);
-  }
-}
-
-.info-tweet-ctr {
-  background-color: $info-bg;
-  box-shadow: 0px 6px 10px $header-shadow;
-  border-radius: 5px;
-  width: 400px;
-  text-align: center;
-  margin: 30px;
-  padding: 30px;
-}
-
-
-.info-datapts {
-  margin: 10px;
-  color: $coin-info-text;
-}
-
-.info-button {
-  outline: 0;
-  height: 45px;
-  width: 150px;
-  font-size: 25px;
-}
-
