--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -5,6 +5,9 @@
 @import "coin";
 @import "coininfo";
 @import "coinlist";
+@import "coinnewsview";
+@import "coinDetail";
+@import "coinMetrics";
 @import "cryptolist";
 @import "dashboard";
 @import "footer";
