--- a/client/src/scss/_globals.scss
+++ b/client/src/scss/_globals.scss
@@ -22,7 +22,7 @@
   position: fixed;
   width: 100%;
   background-color: $header-color;
-  height: 7vh;
+  height: 60px;
   display: flex;
   flex-direction: row;
   align-items: center;
