--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -6,7 +6,7 @@
 }
 
 .App {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
   background-color: #ffffff;
@@ -37,18 +37,6 @@
   border: red 1px solid;
   background-color: #FAE2E2;
   padding: 10px;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  padding: 10px;
-}
-
-.nav-section {
-  display: flex;
-  justify-content: space-around;
 }
 
 a {
@@ -158,12 +146,13 @@ main {
   -webkit-box-flex-direction: row;
   -moz-box-flex-direction: row;
   flex-direction: row;
-  -webkit-box-justify-content: space-between;
-  -moz-box-justify-content: space-between;
-  -ms-justify-content: space-between;
-  justify-content: space-between;
+  -webkit-box-justify-content: space-around;
+  -moz-box-justify-content: space-around;
+  -ms-justify-content: space-around;
+  justify-content: space-around;
   width: 100vw;
   padding: 0 75px;
+  margin: 50px 0;
   align-items: center;
 }
 
@@ -206,22 +195,13 @@ main {
   -ms-justify-content: space-around;
   justify-content: space-around;
   margin: 0 175px;
-}
-
-.coinlist {
   height: 100%;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  flex-flow: wrap;
 }
 
 .newsDisplay {
-  height: auto;
+  height: 2000px;
   overflow: scroll;
   width: 40vw;
-  align-items: center;
-  text-align: center;
 }
 
 .coinDetail {
