--- a/client/src/scss/_coinnewsview.scss
+++ b/client/src/scss/_coinnewsview.scss
@@ -1,7 +1,5 @@
 .newsDisplay{
-  height:auto;
+  height:2000px;
   overflow: scroll;
   width: 40vw;
-  align-items: center;
-  text-align: center;
 }
