--- a/client/src/scss/_coininfo.scss
+++ b/client/src/scss/_coininfo.scss
@@ -3,17 +3,11 @@
   @include flexbox(column, space-around);
 
   &__header {
-    @include flexbox(row, space-around);
+    @include flexbox();
     width: 100vw;
     padding: 0 75px;
     margin:  50px 0;
     align-items: center;
-
-    &--left {
-      @include flexbox();
-      align-items: center;
-    }
-
     &--image {
       height: 125px;
     }
@@ -25,9 +19,7 @@
       margin-right: 100px;
     }
   }
-  &__wrapper{
-    @include flexbox(row, space-around);
-    margin: 0 175px;
-    height: 100%;
+  &__ctr{
+    @include flexbox();    
   }
 }
