--- a/client/src/scss/_coininfo.scss
+++ b/client/src/scss/_coininfo.scss
@@ -3,9 +3,9 @@
   @include flexbox(column, space-around);
 
   &__header {
-    @include flexbox();
+    @include flexbox(row, space-between);
     width: 100vw;
-    padding: 0 75px;
+    padding: 0 175px;
     margin:  50px 0;
     align-items: center;
     &--image {
