--- a/client/src/scss/_coininfo.scss
+++ b/client/src/scss/_coininfo.scss
@@ -18,8 +18,12 @@
     &--button{
       margin-right: 100px;
     }
+    &--left{
+      @include flexbox();
+      align-items: center;   
+    }
   }
   &__ctr{
-    @include flexbox();    
+    @include flexbox(); 
   }
 }
