--- a/client/src/scss/_coinMetrics.scss
+++ b/client/src/scss/_coinMetrics.scss
@@ -1,13 +1,7 @@
-.coinMetric{
+.coinMetric {
   @include flexbox(column, space-around);
-  &__wrapper{
-    &--top{
-      @include flexbox(column, space-evenly);
-      height:400px;
-      flex-wrap: wrap;
-    }
-    &--bottom{
-      @include flexbox()
-    }
-  }
+
+&__ctrBtm{
+  @include flexbox();
+}
 }
