--- a/client/src/scss/_dashboard.scss
+++ b/client/src/scss/_dashboard.scss
@@ -16,8 +16,8 @@
 }
 
 .db-title {
-  margin-top: 8vh;
-  margin-bottom: 40px;
+  padding-top: 60px;
+  padding-bottom: 40px;
   text-align: center;
   font-size: 30px;
 }
