--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -414,4 +414,9 @@ main {
   border-radius: 5px;
   background-color: rgba(110, 110, 128, 0.6);
 }
+
+.graph {
+  transform: rotate(180deg);
+  transform: scaleY(-1);
+}
 /*# sourceMappingURL=main.css.map */
