--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -92,15 +92,15 @@ main {
 
 .coin-ctr {
   display: flex;
-  margin: 10px 25px;
+  margin: 5px 12.5px;
   justify-content: space-evenly;
   align-content: space-evenly;
   background-color: #CDCDCD;
   border-radius: 5px;
   border: 1px #cacacf solid;
   box-shadow: 0px 6px 10px rgba(41, 41, 48, 0.65);
-  height: 125px;
-  width: 250px;
+  height: 75px;
+  width: 150px;
 }
 
 .coin-bs :hover {
@@ -108,17 +108,20 @@ main {
 }
 
 .coin-data-ctr {
-  width: 90px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10px 35px 10px 10px;
+  font-size: 14px;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
+.coin-data-btm {
+  margin-top: -3px;
 }
 
 .coin-img {
-  height: 70px;
-  width: 70px;
+  height: 60px;
+  width: 60px;
   align-self: center;
+  margin-left: 5px;
 }
 
 .coinInfo {
