--- a/client/src/scss/_coin.scss
+++ b/client/src/scss/_coin.scss
@@ -4,15 +4,15 @@
 
 .coin-ctr{
   display: flex;
-  margin: 10px 25px;
+  margin: 5px 12.5px;
   justify-content: space-evenly;
   align-content: space-evenly;
   background-color: $ticker-bg ;
   border-radius: 5px;
   border: 1px $border solid;
   box-shadow: 0px 6px 10px $header-shadow;
-  height: 125px;
-  width:250px;
+  height: 75px;
+  width:150px;
 }
 
 .coin-bs :hover{
@@ -20,16 +20,17 @@
 }
 
 .coin-data-ctr {
-  width: 90px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10px 35px 10px 10px;
+  font-size: 14px;
+  padding-top: 5px ;
+  padding-left: 5px;
 }
-
+.coin-data-btm{
+  margin-top: -3px;
+}
 .coin-img {
-  height: 70px;
-  width: 70px;
+  height: 60px;
+  width: 60px;
   align-self:center;
+  margin-left: 5px;
 }
 
